<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.fragment.SendOtpFragment"
    android:background="@color/bg_dark">


<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:fillViewport="true"-->
<!--        android:scrollIndicators="none">-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/top_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:padding="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/bottom_layout">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_20sdp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/logo_card"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        app:cardCornerRadius="@dimen/_100sdp"
                        app:cardElevation="0dp"
                        app:cardBackgroundColor="@color/primary"
                        >
                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:src="@drawable/app_logo"
                            android:layout_gravity="center"/>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="@dimen/_24ssp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/logo_card"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/_16ssp"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/welcome_raido_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hi_welcome_to_raido"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_your_account"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/gray"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_phone_number"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/gray"
                    android:layout_marginTop="@dimen/_24sdp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/mobile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/bg_light"
                    app:cardCornerRadius="@dimen/_12sdp"
                    app:cardElevation="0dp"
                    android:layout_marginVertical="@dimen/_4sdp"
                    app:contentPadding="@dimen/_12sdp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:src="@drawable/in_flag"
                            android:scaleType="fitXY"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="+91"
                            android:layout_marginHorizontal="@dimen/_6sdp"
                            android:textSize="@dimen/_14sdp"
                            android:textColor="@color/white"/>

                        <EditText
                            android:id="@+id/mobile_edittext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_phone_number"
                            android:background="@color/bg_light"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp"
                            android:maxLines="1"
                            android:maxLength="10"
                            android:inputType="phone"/>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/securing_your_personal_information_is_our_priority"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/gray"/>

                <TextView
                    android:id="@+id/mobile_number_err"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/_10sdp"
                    android:layout_gravity="start"
                    android:visibility="visible"
                    android:textColor="@color/failed"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:padding="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/get_otp_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_otp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/bg_light"/>

                <TextView
                    android:id="@+id/termCondition_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/gray"
                    android:padding="@dimen/_8sdp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



<!--    </ScrollView>-->

</FrameLayout>